adds sticky nav and links to projects

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div class="row text-center" id="splash-screen">
 
-            <div class="col-xs-12 spash-content">
+            <div class="col-xs-12 splash-content">
 
                 <p>Hello, my name is</p>
                 <h1>Ritchie Garcia</h1>
@@ -124,18 +124,29 @@
                 <div class="row">
 
                     <div class="col-xs-4 web-dev-single">
-                        <img class="img-fluid" src="assets/images/train-scheduler2.png" alt="Train Scheduler">
+
+                        <a href="https://github.com/savagedetective/Train-Scheduler">
+                            <img class="img-fluid" src="assets/images/train-scheduler2.png" alt="Train Scheduler">
+                        </a>
                         <h3>Train Scheduler</h3>
+
                     </div>
 
                     <div class="col-xs-4 web-dev-single">
-                        <img class="img-fluid" src="assets/images/urban-english.png" alt="Urban english">
+
+                        <a href="https://github.com/michelle-you/urban-english">
+                            <img class="img-fluid" src="assets/images/urban-english.png" alt="Urban english">
+                        </a>
                         <h3>Urban English</h3>
+                        
                     </div>
 
                     <div class="col-xs-4 web-dev-single">
-                        <img class="img-fluid" src="assets/images/crystals-game.png" alt="Crystals Game">
+                        <a href="https://github.com/savagedetective/Crystals-Game">
+                            <img class="img-fluid" src="assets/images/crystals-game.png" alt="Crystals Game">
+                        </a>
                         <h3>Crystals Game</h3>
+
                     </div>
 
                 </div>
@@ -147,19 +158,27 @@
                     </div>
 
                     <div class="col-xs-4 web-dev-single">
-                        <img class="img-fluid" src="assets/images/giphy-things2.png" alt="giphy things">
+
+                        <a href="https://github.com/savagedetective/GifTastic">
+                            <img class="img-fluid" src="assets/images/giphy-things2.png" alt="giphy things">
+                        </a>
                         <h3> Giphy Things</h3>
+
                     </div>
 
                     <div class="col-xs-4 web-dev-single">
-                        <img class="img-fluid" src="assets/images/trivia-game2.png" alt="Trivia Game">
+
+                        <a href="https://github.com/savagedetective/TriviaGame">
+                            <img class="img-fluid" src="assets/images/trivia-game2.png" alt="Trivia Game">
+                        </a>
                         <h3> Trivia Game</h3>
+
                     </div>
 
                     <div class="col-xs-2 web-dev-single">
 
                     </div>
-                    
+
                 </div>
 
 
