hopefully fixes images

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="col-xs-6" id="center-about">
-                <img id="pic-of-me" src="assets/images/myself.jpg" alt="just me">
+                <img id="pic-of-me" src="assets/images/myself.JPG" alt="just me">
             </div>
 
             <div class="col-xs-3" id="right-about">
@@ -126,7 +126,7 @@
                     <div class="col-xs-4 web-dev-single">
 
                         <a href="https://github.com/savagedetective/Train-Scheduler">
-                            <img class="img-fluid" src="assets/images/train-scheduler2.png" alt="Train Scheduler">
+                            <img class="img-fluid" src="assets/images/train-scheduler2.PNG" alt="Train Scheduler">
                         </a>
                         <h3>Train Scheduler</h3>
 
@@ -169,7 +169,7 @@
                     <div class="col-xs-4 web-dev-single">
 
                         <a href="https://github.com/savagedetective/TriviaGame">
-                            <img class="img-fluid" src="assets/images/trivia-game2.png" alt="Trivia Game">
+                            <img class="img-fluid" src="assets/images/trivia-game2.PNG" alt="Trivia Game">
                         </a>
                         <h3> Trivia Game</h3>
 
