--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <div class="col-xs-4 web-dev-single">
 
                         <a href="https://github.com/savagedetective/GifTastic">
-                            <img class="img-fluid" src="assets/images/giphy-things2.png" alt="giphy things">
+                            <img class="img-fluid" src="assets/images/giphy-things2.PNG" alt="giphy things">
                         </a>
                         <h3> Giphy Things</h3>
 
